--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 ::selection {
-  background: #ddcee6;
+  background: #f7f7f7;
   color: #101010;
 }
 
@@ -168,6 +168,11 @@ body {
   color: #101010;
 }
 
+.hero-subtitle::selection {
+  color: #F7F7F7;
+  background: #101010;
+}
+
 /* ------------------- HERO MEDIA ------------------- */
 .hero-media {
   position: relative;
@@ -183,6 +188,7 @@ body {
   height: auto;
   object-fit: cover;
   border-radius: 2%;
+  user-select: none;
 }
 
 /* ------------------- HERO BOX ------------------- */
@@ -211,6 +217,15 @@ body {
   flex: 2 1 400px;
 }
 
+.hero-box p {
+  color: #101010;
+}
+
+.hero-box p::selection {
+  color: #F7F7F7;
+  background-color: #101010;
+}
+
 .hero-description {
   margin-top: 3rem;
   margin-bottom: 0;
@@ -221,6 +236,11 @@ body {
   opacity: 0.8;
   margin-left: auto;
   margin-right: auto;
+}
+
+.hero-description::selection {
+  color: #F7F7F7;
+  background-color: #101010;
 }
 
 /* ------------------- ABOUT SECTION ------------------- */
@@ -270,7 +290,7 @@ body {
   flex-wrap: wrap;
   gap: clamp(1rem, 4vw, 3rem);
   align-items: stretch;
-  margin: clamp(2rem, 6vh, 4rem) 0;
+  margin: clamp(2rem, 6vh, 4rem) 0 0 0;
 }
 
 /* Left: game window */
@@ -366,3 +386,112 @@ body {
   color: #101010;
   background-color: #F7F7F7;
 }
+
+
+/* ------------------- PROJECT CARDS ------------------- */
+/* Nascondi front al hover */
+.projects-grid {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 0;
+  width: 100%;
+  height: 550px; /* altezza fissa per mantenere consistenza */
+}
+
+.project-card {
+  flex: 1;
+  border: 1px solid #000;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: flex 0.4s ease;
+  position: relative;
+}
+
+.project-card:hover {
+  flex: 2; /* si espande spingendo le altre lateralmente */
+}
+
+.card-front, .card-back {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  transition: opacity 0.3s ease;
+}
+
+.card-front {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 10px;
+  opacity: 1;
+  text-align: left;
+
+}
+
+.card-front h3 {
+  font-family: 'Sofia Sans Condensed Bold', sans-serif;
+  font-weight: 700;
+  font-size: clamp(1.5rem, 2.5vw, 2rem);
+  line-height: 1.1;
+  letter-spacing: -0.1em;
+  margin-bottom: 10px;
+  color: #101010;
+}
+
+.project-card:hover .card-front {
+  opacity: 0; /* nasconde il front */
+  pointer-events: none;
+}
+
+.card-back {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  opacity: 0;
+}
+
+.project-card:hover .card-back {
+  opacity: 1; /* mostra il back */
+}
+
+.card-header {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.card-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.card-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-weight: bold;
+}
+
+.card-back img {
+  width: 40%;   /* immagine più piccola */
+  height: auto;
+  border-radius: 6px;
+}
+
+.card-description {
+  text-align: justify;
+  margin-top: 20px;
+  font-size: 14px;
+  line-height: 1.6;
+}
+
+
+
